--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,12 @@
   "description": "一键对接Shell API的浏览器插件 - 自动扫描表格、获取模型列表、生成桥接URL",
   "author": "您的名字",
   "homepage_url": "https://github.com/akl7777777/ShellAPI-Bridge-Extension",
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
     "activeTab",
     "storage",
@@ -16,7 +22,13 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "ShellAPI Bridge - 一键对接API"
+    "default_title": "ShellAPI Bridge - 一键对接API",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "content_scripts": [
     {
